// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box allows specifying an opacity for the background color 1`] = `
.pounce-0 {
  background-color: white;
  background-color: rgba(255,255,255,0.5);
}

<div>
  <div
    class="pounce-0"
  />
  <div
    class="pounce-0"
  />
  <div
    class="pounce-0"
  />
  <div
    class="pounce-0"
  />
</div>
`;

exports[`Box allows specifying an opacity for the border color 1`] = `
.pounce-0 {
  border: 1px solid;
  border-color: white;
  border-color: rgba(255,255,255,0.5);
}

<div>
  <div
    class="pounce-0"
  />
  <div
    class="pounce-0"
  />
  <div
    class="pounce-0"
  />
  <div
    class="pounce-0"
  />
</div>
`;

exports[`Box allows styling on demand 1`] = `
.pounce-0 {
  color: black;
  background: red;
  text-transform: uppercase;
}

<div>
  <div
    class="pounce-0"
  />
</div>
`;

exports[`Box allows truncated values 1`] = `
.pounce-0 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
  <div
    class="pounce-0"
  />
</div>
`;

exports[`Box renders 1`] = `
<div>
  <div
    class="pounce-0"
  />
</div>
`;
